--- a/Pages/AdminConfiguracion.razor
+++ b/Pages/AdminConfiguracion.razor
@@ -145,11 +145,13 @@
                                           Filterable="false">
                         <Template Context="p">
                             <RadzenButton Icon="edit"
+                                          Title="Editar"
                                           Size="ButtonSize.Small"
                                           ButtonStyle="ButtonStyle.Light"
                                           Style="margin-right:0.5rem;"
                                           Click="@(() => AbrirEditarPalabra(p))" />
                             <RadzenButton Icon="delete"
+                                          Title="Eliminar"
                                           Size="ButtonSize.Small"
                                           ButtonStyle="ButtonStyle.Light"
                                           Click="@(() => BorrarPalabra(p))" />
