--- a/Pages/InvestFragancias.razor
+++ b/Pages/InvestFragancias.razor
@@ -78,29 +78,32 @@
                                       FilterOperator="FilterOperator.Contains" />
 
                 <RadzenDataGridColumn TItem="FraganciaModel"
-                                      Title="Acciones"
-                                      Width="120px"
-                                      Filterable="false">
+                                    Title="Acciones"
+                                    Width="120px"
+                                    Filterable="false">
                     <Template Context="f">
                         <RadzenButton Icon="edit"
+                                    Title="Editar fragancia"
                                     Size="ButtonSize.Small"
                                     ButtonStyle="ButtonStyle.Light"
                                     Style="margin-right:0.5rem;"
                                     Click="@(() => AbrirEditarFragancia(f))" />
 
                         <RadzenButton Icon="file_download"
+                                    Title="Descargar fragancia"
                                     Size="ButtonSize.Small"
                                     ButtonStyle="ButtonStyle.Light"
                                     Style="margin-right:0.5rem;"
                                     Click="@(() => DescargarFragancia(f))" />
-                        
 
                         <RadzenButton Icon="delete"
-                                      Size="ButtonSize.Small"
-                                      ButtonStyle="ButtonStyle.Light"
-                                      Click="@(() => OnBorrarFragancia(f))" />
+                                    Title="Eliminar fragancia"
+                                    Size="ButtonSize.Small"
+                                    ButtonStyle="ButtonStyle.Light"
+                                    Click="@(() => OnBorrarFragancia(f))" />
                     </Template>
                 </RadzenDataGridColumn>
+
             </Columns>
         </RadzenDataGrid>
     </RadzenCard>
