--- a/Pages/AdminConfiguracion.razor
+++ b/Pages/AdminConfiguracion.razor
@@ -76,11 +76,13 @@
                                           Width="150px">
                         <Template Context="c">
                             <RadzenButton Icon="edit"
+                                          Title="Editar"
                                           Size="ButtonSize.Small"
                                           ButtonStyle="ButtonStyle.Light"
                                           Style="margin-right:0.5rem;"
                                           Click="@(() => AbrirEditarColor(c))" />
                             <RadzenButton Icon="delete"
+                                          Title="Eliminar"
                                           Size="ButtonSize.Small"
                                           ButtonStyle="ButtonStyle.Light"
                                           Click="@(() => BorrarColor(c))" />
