--- a/Pages/AdminUsuario.razor
+++ b/Pages/AdminUsuario.razor
@@ -82,7 +82,7 @@
                                     Style="margin-right:0.5rem;" />
                         
                         <RadzenButton Icon="file_download"
-                                    Title="Descargar perfil"
+                                    Title="Descargar usuario"
                                     Size="ButtonSize.Small"
                                     ButtonStyle="ButtonStyle.Light"
                                     Style="margin-right:0.5rem;"
